# ProjektBaze-2019

./: Dokumentacija_baze_podataka.docx  KakoKomentiratiKod.md  LibLink.md  README.md  SQLAPI_Tut.md  Setup.md
InstalacijaKoraci/: LibLink.md  OracleUser.md  README.md  TestiranjeProjekta
InstalacijaKoraci/TestiranjeCppLib/: README.md  TestTable.sql  TestiranjeProjekta_select.md
InstalacijaKoraci/Win64/: README.md
InstalacijaKoraci/Win64-lib/: README.md
InstalacijaKoraci/Win64/sql/: TestTable.sql
OracleSql/: VET_ambulanta_upiti.sql  VET_inspekcije_upiti.sql  VET_intervencije_upiti  VET_radnici_upiti.sql  VeterinarStart.sql
Prezentacija/: Video_Final.osp
Prezentacija/Aleks/: Dokumentacija_Baze_Podataka.pptx
Prezentacija/David/: Video.osp
Prezentacija/Denis/Denis/: Video.osp
Prezentacija/Program/: 3.mkv  Video-Prog.osp
Prezentacija/Video/: Video_Dio.7z.017
ProgramiranjeKoraci/: README.md  SQLAPI_Tut.md
ProjektMain/Cpp/VetApp-1-0/: CMakeLists.txt  dbConnection.cpp  dbConnection.h  dbTablice.cpp  dbTablice.h  dbUpiti.cpp  dbUpiti.h  main.cpp  uiIntro.h  ui_main.cpp  ui_main.h  ui_user.cpp  ui_user.h
ProjektMain/Cpp/VetApp-1-0/User_Menu/: ui_menu_Doktor.cpp  ui_menu_Doktor.h  ui_menu_Racunovoda.cpp  ui_menu_Racunovoda.h  ui_menu_Vet_Sys.cpp  ui_menu_Vet_Sys.h  ui_menu_Voditelj_Odjela.cpp  ui_menu_Voditelj_Odjela.h
ProjektMain/SQL_V2/: Sys_Init.sql  Veterinar_DATA.sql  ZadnjaTri.sql
ProjektMain/SQL_V2/Roles/: ROLE_DOKTOR.sql  ROLE_RACUNOVODA.sql  ROLE_VODITELJ_ODJELA.sql
ProjektMain/SQL_V2/Tablice/: Constraints_Alter.sql  Veterinar_Table_Ambulanta.sql  Veterinar_Table_Intervencije.sql  Veterinar_Table_Zaposlenici.sql
ProjektMain/SQL_V2/Veterinar_sys/: Roles.sql  STARO_Roles.sql  Veterinar_AutoIncr_SEKVENCE.sql
ProjektMain/Sql/: Procedure&Funkcije.sql  Veterinar_AutoIncr_SEKVENCE.sql  Veterinar_DATA.sql
ProjektMain/Sql.old/: Procedure&Funkcije.sql  Veterinar_DATA.sql
ProjektMain/Sql.old/Tablice/: Veterinar_Table_KorisnikZivotinje.sql  Veterinar_Table_Pogledi.sql  Veterinar_Table_ProgramData.sql  Veterinar_Table_Sve.sql
ProjektMain/Sql.old/User/: VeterinarStart.sql.old  Veterinar_Roles.sql.old  Veterinar_START.sql  Veterinar_User_Roles.sql
ProjektMain/Sql/Tablice/: README.md  Veterinar_Table_Ambulanta.sql  Veterinar_Table_Inspekcije.sql  Veterinar_Table_Intervencije.sql  Veterinar_Table_KorisnikZivotinje.sql  Veterinar_Table_Pogledi.sql  Veterinar_Table_Sve.sql  Veterinar_Table_Zaposlenici.sql
ProjektMain/Sql/Upiti/: Doktor.sql  Racunovoda.sql  Upiti_v3.txt  VET_ambulanta_upiti.sql  VET_inspekcije_upiti.sql  VET_korisniciZivotinje_upiti.sql  VET_radnici_upiti.sql  Voditelj_Odjela.sql
ProjektMain/Sql/User/: VeterinarStart.sql  Veterinar_Roles.sql  Veterinar_START.sql  Veterinar_START_Users.sql  Veterinar_START_Veterinar_SYS.sql  Veterinar_User_Roles.sql
SCHEME_slike/: Amb_new.png.old
SetupKoraci/InstalacijaKoraci/: OracleUser.md  README.md  Setup.md
SetupKoraci/InstalacijaKoraci/Win64-lib/: README.md
SetupKoraci/ProgramiranjeKoraci/: KakoStrukturiratiKod.md
Sve_za_predat/: linkovi.txt
Sve_za_predat/Cpp/VetApp-1-0/: dbConnection.cpp  dbConnection.h  dbTablice.cpp  dbTablice.h  main.cpp  ui_main.h  ui_user.h
Sve_za_predat/Prezentacija/Marko/: Marko QA baze.pptx
Sve_za_predat/SQL/: View_preko_funkcije.sql  ZadnjaTri.sql
Sve_za_predat/SQL/Roles/: ROLE_DOKTOR.sql  ROLE_RACUNOVODA.sql  Test.sql
Sve_za_predat/SQL/Tablice/: Constraints_Alter.sql  Veterinar_Table_Inspekcije.sql  Veterinar_Table_Intervencije.sql  Veterinar_Table_ProgramData.sql
Sve_za_predat/SQL/Veterinar_sys/: LogInOutTrigger.sql  (+1 more)
examples/Qt/QtSqlExample/books/: CMakeLists.txt  bookwindow.h
examples/SqlApi/Testing/: CMakeLists.txt  main.cpp  sqltst.cpp
(+34 files in other folders)
